--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "ci_deploy": "cdk deploy --require-approval never"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.141",
