--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,13 +16,16 @@ jobs:
           aws_secret_access_key: AWS_ACCESS_SECRET
       - checkout
       - run:
+          name: 'Environvement variables'
+          command: echo ${AWS_ACCOUNT_ID}
+      - run:
           name: 'Build CDK App'
           command: | 
             npm install
             npm run build
       - run:
           name: 'cdk_deploy'
-          command: ACCOUNT_ID=AWS_ACCOUNT_ID REGION_NAME=AWS_REGION_NAME npm run ci_deploy
+          command: ACCOUNT_ID=${AWS_ACCOUNT_ID} REGION_NAME=${AWS_REGION_NAME} npm run ci_deploy
 workflow:
   cdk-deployment:
     jobs:
