--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ executors:
     docker:
       - image: 'cimg/node:22.5.1'
     environment:
-      AWS_REGION: AWS_REGION_ID
+      AWS_REGION: AWS_REGION_NAME
 jobs:
   build:
     executor: aws-executor
