--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   aws-cli: circleci/aws-cli@4.0.0
+  node: circleci/node@5
 executors:
   aws-executor:
     docker:
@@ -9,12 +10,14 @@ executors:
       AWS_REGION: AWS_REGION_NAME
 jobs:
   build:
-    executor: aws-executor
+    executor: aws-cli/default
     steps:
       - aws-cli/setup:
-          aws_access_key_id: AWS_ACCESS_KEY
-          aws_secret_access_key: AWS_ACCESS_SECRET
-          region: AWS_REGION_NAME
+          profile_name: WEB IDENTITY PROFILE
+          role_arn: arn:aws:iam::590376488337:user/neeraj_agrawal
+          role_session_name: neeraj_agrawal
+  deploy:
+    executor: node/default
       - checkout
       - run:
           name: 'Environvement variables'
@@ -31,3 +34,6 @@ workflow:
   cdk-deployment:
     jobs:
       - build
+      - deploy
+          requires:
+            - build
