--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - aws-cli/setup:
           aws_access_key_id: AWS_ACCESS_KEY
           aws_secret_access_key: AWS_ACCESS_SECRET
-          aws_region: AWS_REGION_NAME
+          region: AWS_REGION_NAME
   deploy:
     executor: node/default
     steps:
