--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,15 +10,12 @@ executors:
       AWS_REGION: AWS_REGION_NAME
 jobs:
   build:
-    executor: aws-cli/default
+    executor: aws-executor
     steps:
       - aws-cli/setup:
           aws_access_key_id: AWS_ACCESS_KEY
           aws_secret_access_key: AWS_ACCESS_SECRET
           region: AWS_REGION_NAME
-  deploy:
-    executor: node/default
-    steps:
       - checkout
       - run:
           name: 'Environvement variables'
@@ -35,6 +32,3 @@ workflow:
   cdk-deployment:
     jobs:
       - build
-      - deploy:
-          requires:
-            - build
