--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ executors:
     docker:
       - image: 'cimg/node:22.5.1'
     environment:
-      AWS_REGION: AWS_REGION_NAME
+      AWS_REGION: us-east-1
 jobs:
   build:
     executor: aws-executor
@@ -16,7 +16,7 @@ jobs:
           role_arn: arn:aws:iam::590376488337:user/neeraj_agrawal
           aws_access_key_id: AWS_ACCESS_KEY
           aws_secret_access_key: AWS_ACCESS_SECRET
-          region: AWS_REGION_NAME
+          region: us-east-1
           profile_name: neeraj_agrawal
       - checkout
       - run:
