--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,14 +7,14 @@ executors:
     docker:
       - image: 'cimg/node:22.5.1'
 jobs:
-  build:
+  build-app:
     executor: aws-cli/default
     steps:
       - aws-cli/setup:
           aws_access_key_id: AWS_ACCESS_KEY
           aws_secret_access_key: AWS_ACCESS_SECRET
           region: AWS_REGION_NAME
-  deploy:
+  deploy-app:
     executor: node/default
     steps:
       - checkout
@@ -32,5 +32,5 @@ jobs:
 workflow:
   cdk-deployment:
     jobs:
-      - build
-      - deploy
+      - build-app
+      - deploy-app
