--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,4 +33,6 @@ workflow:
   cdk-deployment:
     jobs:
       - build-app
-      - deploy-app
+      - deploy-app:
+          requires:
+            - build-app
