--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,14 +7,14 @@ orbs:
 #     docker:
 #       - image: 'cimg/node:22.5.1'
 jobs:
-  build-app:
+  build:
     executor: aws-cli/default
     steps:
       - aws-cli/setup:
           aws_access_key_id: AWS_ACCESS_KEY
           aws_secret_access_key: AWS_ACCESS_SECRET
           region: AWS_REGION_NAME
-  deploy-app:
+  deploy:
     executor: node/default
     steps:
       - checkout
@@ -32,7 +32,7 @@ jobs:
 workflow:
   cdk-deployment:
     jobs:
-      - build-app
-      - deploy-app:
+      - build
+      - deploy:
           requires:
-            - build-app
+            - build
