--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,10 @@ version: 2.1
 orbs:
   aws-cli: circleci/aws-cli@4.0.0
   node: circleci/node@5
-# executors:
-#   aws-executor:
-#     docker:
-#       - image: 'cimg/node:22.5.1'
+executors:
+  aws-executor:
+    docker:
+      - image: 'cimg/node:22.5.1'
 jobs:
   build:
     executor: aws-cli/default
@@ -14,9 +14,6 @@ jobs:
           aws_access_key_id: AWS_ACCESS_KEY
           aws_secret_access_key: AWS_ACCESS_SECRET
           region: AWS_REGION_NAME
-  deploy:
-    executor: node/default
-    steps:
       - checkout
       - run:
           name: 'Environvement variables'
