--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,15 @@ executors:
       - image: 'cimg/node:22.5.1'
 jobs:
   build:
-    executor: aws-cli/default
+    executor: aws-executor
     steps:
-      - aws-cli/setup:
-          aws_access_key_id: AWS_ACCESS_KEY
-          aws_secret_access_key: AWS_ACCESS_SECRET
-          region: AWS_REGION_NAME
+      # - aws-cli/setup:
+      #     aws_access_key_id: AWS_ACCESS_KEY
+      #     aws_secret_access_key: AWS_ACCESS_SECRET
+      #     region: AWS_REGION_NAME
+      - run:
+          name: AWS Configuration
+          command: aws configure
       - checkout
       - run:
           name: 'Environvement variables'
