--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,10 @@ jobs:
   build:
     executor: aws-executor
     steps:
-      # - aws-cli/setup:
-      #     aws_access_key_id: AWS_ACCESS_KEY
-      #     aws_secret_access_key: AWS_ACCESS_SECRET
-      #     region: AWS_REGION_NAME
+      - aws-cli/setup:
+          aws_access_key_id: AWS_ACCESS_KEY
+          aws_secret_access_key: AWS_ACCESS_SECRET
+          region: AWS_REGION_NAME
       - run:
           name: AWS Configuration
           command: aws configure
