--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ executors:
     docker:
       - image: 'cimg/node:22.5.1'
 jobs:
-  build:
+  deployment:
     executor: aws-executor
     steps:
       - aws-cli/setup:
@@ -26,7 +26,4 @@ jobs:
 workflow:
   cdk-deployment:
     jobs:
-      - build
-      - deploy:
-          requires:
-            - build
+      - deployment
